--- a/style.css
+++ b/style.css
@@ -96,6 +96,10 @@ button {
   color: #464c5a;
 }
 
+#description-mobile {
+  display: none;
+}
+
 
 /* ------------------- RESPONSIVE: TABLET ------------------- */
 @media screen and (max-width: 1024px) {
@@ -137,6 +141,25 @@ button {
 @media screen and (max-width: 768px) {
   body {
     padding: 20px 10px;
+  }
+
+  #description {
+    display: none;
+  }
+
+  #description-mobile {
+    display: block;
+    font-size: 17px;
+    color: rgb(147, 74, 0);
+    font-family: monospace;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  #description-mobile .subtitle {
+    font-size: 22px;
+    color: #464c5a;
   }
 
   .info {
