--- a/style.css
+++ b/style.css
@@ -1,103 +1,103 @@
 * {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
 /* PARAMETRI DELLO SFONDO INTERO */
 body {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  background: linear-gradient(45deg, #0a0a0a, #3a4452);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background: linear-gradient(45deg, #0a0a0a, #3a4452);
 }
 
 /* PARAMETRI DEL CONTENITORE DEI BUTTON */
 
 .calc {
-  border: 1px solid black;
-  border-radius: 16px;
-  padding: 20px;
-  box-shadow: 0px 3px 15px rgba(113, 115, 119, 0.6);
-  background: transparent;
+    border: 1px solid black;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: 0px 3px 15px rgba(113, 115, 119, 0.6);
+    background: transparent;
 }
 
 input {
-  width: 320px;
-  margin: 10px;
-  border: none;
-  padding: 24px;
-  background: transparent;
-  box-shadow: 0px 3px 15px rgba(84, 84, 84, 0.1);
-  font-size: 40px;
-  text-align: right;
-  cursor: pointer;
-  color: white;
+    width: 320px;
+    margin: 10px;
+    border: none;
+    padding: 24px;
+    background: transparent;
+    box-shadow: 0px 3px 15px rgba(84, 84, 84, 0.1);
+    font-size: 40px;
+    text-align: right;
+    cursor: pointer;
+    color: white;
 }
 
 input::placeholder {
-  color: white;
+    color: white;
 }
 
 button {
-  border: none;
-  width: 60px;
-  height: 60px;
-  margin: 10px;
-  border-radius: 50%;
-  background: transparent;
-  color: white;
-  font-size: 20px;
-  box-shadow: -9px -9px 16px rgba(255, 255, 255, 0.2);
-  cursor: pointer;
+    border: none;
+    width: 60px;
+    height: 60px;
+    margin: 10px;
+    border-radius: 50%;
+    background: transparent;
+    color: white;
+    font-size: 20px;
+    box-shadow: -9px -9px 16px rgba(255, 255, 255, 0.2);
+    cursor: pointer;
 }
 
 .EQU {
-  background-color: #149b1a;
+    background-color: #149b1a;
 }
 
 .op {
-  background-color: #fb7c14;
+    background-color: #fb7c14;
 }
 
 /* --------------------------------------------------------------------------- */
 
 /* PARAMETRI DELLE INFO PROGETTO */
 .info {
-  font-size: 20px;
-  color: rgb(147, 74, 0);
-  font-family: monospace;
+    font-size: 20px;
+    color: rgb(147, 74, 0);
+    font-family: monospace;
 }
 
 #title {
-  margin-bottom: 10px;
-  font-weight: bold;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
 #creator {
-  margin-bottom: 10px;
-  font-weight: bold;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
 #languages {
-  margin-bottom: 10px;
-  font-weight: bold;
+    margin-bottom: 10px;
+    font-weight: bold;
 }
 
 #description {
-  margin-bottom: 10px;
-  font-weight: bold;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+#date {
+    font-weight: bold;
 }
 
 .subtitle {
-  font-size: 25px;
-  color: #464c5a;
-}
-
-#description-mobile {
-  display: none;
+    font-size: 25px;
+    color: #464c5a;
 }
 
 
@@ -141,25 +141,6 @@ button {
 @media screen and (max-width: 768px) {
   body {
     padding: 20px 10px;
-  }
-
-  #description {
-    display: none;
-  }
-
-  #description-mobile {
-    display: block;
-    font-size: 17px;
-    color: rgb(147, 74, 0);
-    font-family: monospace;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
-  #description-mobile .subtitle {
-    font-size: 22px;
-    color: #464c5a;
   }
 
   .info {
