--- a/style.css
+++ b/style.css
@@ -104,12 +104,18 @@ button {
 /* ------------------- RESPONSIVE: TABLET ------------------- */
 @media screen and (max-width: 1024px) {
   body {
+    width: 100%;
+    height: 100vh;
+    height: 100dvh;
+    display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    padding: 40px 20px;
-    height: auto;
+    background: linear-gradient(45deg, #0a0a0a, #3a4452);
+    overflow-x: hidden;
     overflow-y: auto;
+    margin: 0;
+    padding: 0;
   }
 
   .info {
@@ -143,7 +149,6 @@ button {
     padding: 20px 10px;
     width: 100%;
     height: 100dvh;
-    /* <-- usa dvh al posto di vh */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
